Cloudformation/iolab-app-network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: IO Lab Network & Security group

Parameters:
  appName:
    Description: Application Name
    Type: String
  vpc:
    Description: vpc to work with
    Type: String
  albSG:
    Description: Application Load Balancer
    Type: String
  dbPort:
    Description: port for accessing data base
    Type: Number
  bastionSG:
    Description: port for accessing data base
    Type: String

Resources:
  ProdSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for production server
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !Ref bastionSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-ProdSG

  PreprodQualifSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for pre-production & Qualif
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !Ref bastionSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-PreprodQualifSG

  RDSProdSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup RDS
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref bastionSG
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref ProdSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-RDSProdSG

  RDSDevPreProdSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup RDS
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref bastionSG
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref PreprodQualifSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-RDSDevPreProdSG

Outputs:
  OutPreprodQualifSG:
    Description: Preproduction & Qualif security group
    Value: !Ref PreprodQualifSG
  OutProdSG:
    Description: Prod security group
    Value: !Ref ProdSG
  OutRDSProdSG:
    Description: Prod security group
    Value: !Ref RDSProdSG
  OutRDSDevPreProdSG:
    Description: Prod security group
    Value: !Ref RDSDevPreProdSG
