Cloudformation/iolab-network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: IO Lab Network & Security group

Parameters:
  appName:
    Description: Application Name
    Type: String
  vpc:
    Description: vpc to work with
    Type: String
  albSG:
    Description: Application Load Balancer
    Type: String
  dbPort:
    Description: port for accessing data base
    Type: Number
  bastionSG:
    Description: port for accessing data base
    Type: String

Resources:
  # BastionSG:
  #   Type: AWS::EC2::SecurityGroup
  #   Properties:
  #     GroupDescription: SecurityGroup for bastion
  #     VpcId: !Ref vpc
  #     SecurityGroupIngress:
  #     - IpProtocol: tcp
  #       FromPort: !Ref dbPort
  #       ToPort: !Ref dbPort
  #       CidrIp: !Ref bastionSourceIp
  #     - IpProtocol: tcp
  #       FromPort: 22
  #       ToPort: 22
  #       CidrIp: !Ref bastionSourceIp
  #     Tags:
  #     - Key: Name
  #       Value: !Sub ${appName}-BastionSG

  ProdSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for production server
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443  # TO BE CONFIRMED
        ToPort: 443  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 80  # TO BE CONFIRMED
        ToPort: 80  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref albSG
      - IpProtocol: tcp
        FromPort: 22  # TO BE CONFIRMED
        ToPort: 22  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref bastionSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-ProdSG

  PreprodQualifSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for pre-production & Qualif
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443  # TO BE CONFIRMED
        ToPort: 443  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref albSG # TO BE CONFIRMED
      - IpProtocol: tcp
        FromPort: 80  # TO BE CONFIRMED
        ToPort: 80  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref albSG # TO BE CONFIRMED
      - IpProtocol: tcp
        FromPort: 22  # TO BE CONFIRMED
        ToPort: 22  # TO BE CONFIRMED
        SourceSecurityGroupId: !Ref bastionSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-PreprodQualifSG

  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup RDS
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref bastionSG
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref PreprodQualifSG
      - IpProtocol: tcp
        FromPort: !Ref dbPort
        ToPort: !Ref dbPort
        SourceSecurityGroupId: !Ref ProdSG
      Tags:
      - Key: Name
        Value: !Sub ${appName}-RDSSG

Outputs:
  OutPreprodQualifSG:
    Description: Preproduction & Qualif security group
    Value: !Ref PreprodQualifSG
  OutProdSG:
    Description: Prod security group
    Value: !Ref ProdSG
  OutRDSSG:
    Description: Prod security group
    Value: !Ref RDSSG
