Cloudformation/iolab-vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: IO Lab VPC

Parameters:
  ProjectName:
    Description: project name
    Type: String

Resources:
  vpc:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpc
      InternetGatewayId: !Ref InternetGateway
  
  RouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-RouteTablePublic

  RouteTablePublicInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetPublicA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Sub 10.0.0.0/24
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-SubnetPublicA

  SubnetPublicB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ]
      CidrBlock: !Sub 10.0.1.0/24
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-SubnetPublicB

  SubnetPrivateA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Sub 10.0.2.0/24
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-SubnetPrivateA

  SubnetPrivateB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ]
      CidrBlock: !Sub 10.0.3.0/24
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-SubnetPrivateB

  RouteTableAssociationPublicA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublicA
      RouteTableId: !Ref RouteTablePublic

  RouteTableAssociationPublicB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublicB
      RouteTableId: !Ref RouteTablePublic

  albSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Application Load balancer
      VpcId: !Ref vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443 # TO BE CONFIRMED
        ToPort: 443 # TO BE CONFIRMED
        CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80 # TO BE CONFIRMED
        ToPort: 80 # TO BE CONFIRMED
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub ${ProjectName}-ALBSG

Outputs:
  IOLABVPC:
    Description: IOLAB VPC
    Value: !Ref vpc

  IOLABRouteTablePublic:
    Description: IOLAB Public Route table
    Value: !Ref RouteTablePublic

  ALBSG:
    Description: IOLAB Application load balancer Security group
    Value: !Ref albSG

  OutSubnetPublicA:
    Description: Subnet Public A
    Value: !Ref SubnetPublicA

  OutSubnetPublicB:
    Description: Subnet Public B
    Value: !Ref SubnetPublicB

  OutSubnetPrivateA:
    Description: Subnet Private A
    Value: !Ref SubnetPrivateA

  OutSubnetPrivateB:
    Description: Subnet Private B
    Value: !Ref SubnetPrivateB
